--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Sandbox</title>
+  <meta content="#27c" name="theme-color" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
